Use Java 11 source target (#1035)
Resolves #962